fix: Hid background bars overflow

--- a/src/index.css
+++ b/src/index.css
@@ -353,31 +353,3 @@ input[type=submit],
     -o-transition: display 0.3s ease-in-out;
     transition: display 0.3 ease-in-out;
 }
-
-.bg-bar {
-    position: absolute;
-    z-index: -99;
-
-    top: -50%;
-
-    width: 10vw;
-    height: 200vh;
-    transform: rotate(15deg);
-
-    overflow: hidden;
-}
-
-#bg-bar-1 {
-    background-color: var(--COLOR-4);
-    animation: bg-bar-move 50s infinite;
-}
-
-#bg-bar-2 {
-    background-color: var(--COLOR-6);
-    animation: bg-bar-move 55s infinite;
-}
-
-#bg-bar-3 {
-    background-color: rgb(47, 47, 47);
-    animation: bg-bar-move 60s infinite;
-}
